[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["namig <guseinovnamig41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
ipython = "^8.27.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
faker = "^30.0.0"
punq = "^0.7.0"
motor = "^3.6.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
orjson = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
