[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["namig <guseinovnamig41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
ipython = "^8.27.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
faker = "^30.0.0"
punq = "^0.7.0"
motor = "^3.6.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
orjson = "^3.10.7"
aiokafka = "^0.11.0"
websockets = "^13.1"
pre-commit = "^4.0.1"
autopep8 = "^2.3.1"
black = "^24.10.0"
aiojobs = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["application","domain","infra","logic","settings","tests"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]